added stylings and linked with mongoDB

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <h2 class="center">Welcome to Movie Explorer</h2>
+  <h2 class="center heading">Welcome to Movie Explorer</h2>
 
   <div class="top-bar">
     <button id="logoutBtn" class="logoutbutton">Logout</button>
