--- a/public/watchlist.html
+++ b/public/watchlist.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css//styles.css" />
 </head>
 <body>
-    <h2>My Watchlist</h2>
+    <h2 class="heading">My Watchlist</h2>
     <button onclick="logout()" class="logoutbutton">Logout</button>
     <button onclick="window.location.href='index.html'" class="watchlistbutton">Back to Browse</button>
     <div id="watchlistContainer"></div>
@@ -36,7 +36,7 @@
         container.innerHTML = "";
 
         if (!watchlist.length) {
-            container.innerHTML = "<p>No movies saved yet!</p>";
+            container.innerHTML = "<p class='no-movies'>No movies saved yet!</p>";
             return;
         }
 
