--- a/public/login.html
+++ b/public/login.html
@@ -18,26 +18,34 @@
   </form>
 
   <script>
+  document.addEventListener("DOMContentLoaded", () => {
     document.getElementById("loginForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      const res = await fetch("/api/auth/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ email, password }),
-      });
+      try {
+        const res = await fetch("/api/auth/login", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, password }),
+        });
 
-      const data = await res.json();
+        const data = await res.json();
 
-      if (data.token) {
-        localStorage.setItem("token", data.token);
-        window.location.href = "index.html";
-      } else {
-        document.getElementById("message").textContent = data.message;
+        if (res.status === 200 && data.token) {
+          localStorage.setItem("token", data.token);
+          window.location.href = "index.html";
+        } else {
+          document.getElementById("message").textContent = data.message || "Login failed.";
+        }
+      } catch (err) {
+        console.error("Login error:", err);
+        document.getElementById("message").textContent = "Something went wrong.";
       }
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
