made it responsive,changed stylings and liked with mongoDB

--- a/public/login.html
+++ b/public/login.html
@@ -4,12 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <h1 class="headings">Movie Explorer</h1>
+<p class="para">Discover trending movies and manage your personal watchlist — all in one place.</p>
   <title>Login</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <h2>Login</h2>
-  <form id="loginForm">
+  
+  <form id="loginForm" class="card">
+    <h2 class="login">Login</h2>
     <input type="email" id="email" placeholder="Email" required />
     <input type="password" id="password" placeholder="Password" required />
     <button type="submit">Login</button>
