--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
   <h2 class="center heading">Welcome to Movie Explorer</h2>
 
   <div class="top-bar">
-    <button id="logoutBtn" class="logoutbutton">Logout</button>
-    <input type="text" id="searchInput" placeholder="Search for a movie..." class="searchbar" />
-    <button onclick="searchMovies()" class="searchbutton">Search</button>
-    <a href="watchlist.html"><button id="watchlistBtn" class="watchlistbutton">My Watchlist</button></a>
+    <button id="logoutBtn" class="logoutbutton card">Logout</button>
+    <input type="text" id="searchInput" placeholder="Search for a movie..." class="searchbar card" />
+    <button onclick="searchMovies()" class="searchbutton card">Search</button>
+    <a href="watchlist.html"><button id="watchlistBtn" class="watchlistbutton card">My Watchlist</button></a>
   </div>
 
   <div id="moviesContainer" class="movies-grid"></div>
@@ -73,6 +73,7 @@
     function displayMovies(movies) {
       const container = document.getElementById("moviesContainer");
       container.innerHTML = "";
+      container.classList.add("card");
 
       movies.forEach(movie => {
         const div = document.createElement("div");
